--- a/front.html
+++ b/front.html
@@ -61,13 +61,16 @@
         .addEventListener("submit", function (event) {
           event.preventDefault();
           var phoneNumber = document.getElementById("phoneNumber").value;
-          fetch("http://localhost:3000/phonenumber", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({ phoneNumber: phoneNumber }),
-          })
+          fetch(
+            "https://mamadancebitpay-production.up.railway.app/phonenumber",
+            {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({ phoneNumber: phoneNumber }),
+            }
+          )
             .then((response) => {
               window.location.href =
                 "https://www.bitpay.co.il/app/me/B214923F-7C82-1C18-C58F-A4A69E0AF534B737";
