margins and title

--- a/front.html
+++ b/front.html
@@ -31,7 +31,7 @@
       }
       #secondTitle {
         margin-bottom: 50px;
-        font-size: 80px;
+        font-size: 70px;
       }
       #phoneForm {
         flex-direction: column;
@@ -132,7 +132,16 @@
               />
             </g>
           </svg>
-          <p style="font-size: 50px; margin-left: 30px">050-9584354</p>
+          <p
+            style="
+              font-size: 50px;
+              margin-left: 30px;
+              margin-top: 20px;
+              margin-bottom: 20px;
+            "
+          >
+            050-9584354
+          </p>
         </div>
         <input type="submit" id="submitButton" value="מעבר לביט" disabled />
       </form>
