--- a/front.html
+++ b/front.html
@@ -100,118 +100,118 @@
           name="phoneNumber"
           placeholder="הזינו את מספר הטלפון שלכם"
         />
-        <div
-          style="display: flex; flex-wrap: wrap; justify-content: space-between"
+      </form>
+      <div
+        style="display: flex; flex-wrap: wrap; justify-content: space-between"
+      >
+        <!-- Button/Href 2 -->
+        <a
+          href="https://bitpay.poalimlinks.co.il/app/share-info?i=193506298461_19hAhcL1"
+          target="_blank"
+          disabled
+          ><button class="groupButton" id="button2" disabled>
+            תרומה של 50
+          </button></a
         >
-          <!-- Button/Href 2 -->
-          <a
-            href="https://bitpay.poalimlinks.co.il/app/share-info?i=193506298461_19hAhcL1"
-            target="_blank"
-            disabled
-            ><button class="groupButton" id="button2" disabled>
-              תרומה של 50
-            </button></a
-          >
 
-          <!-- Button/Href 1 -->
-          <a
-            href="https://bitpay.poalimlinks.co.il/app/share-info?i=182702853867_19hAhc8F"
-            target="_blank"
-            ><button class="groupButton" id="button1" disabled>
-              תרומה של 20
-            </button></a
-          >
-
-          <!-- Button/Href 4 -->
-          <a
-            href="https://bitpay.poalimlinks.co.il/app/share-info?i=182702853867_19hAhcOP"
-            target="_blank"
-            ><button class="groupButton" id="button4" disabled>
-              תרומה של 200
-            </button></a
-          >
-          <!-- Button/Href 3 -->
-          <a
-            href="https://bitpay.poalimlinks.co.il/app/share-info?i=193506298461_19hAhcMB"
-            target="_blank"
-            ><button class="groupButton" id="button3" disabled>
-              תרומה של 100
-            </button></a
-          >
-        </div>
-
-        <p onclick="copyText()" style="font-size: 50px; margin-bottom: 0px">
-          לבחירת סכום אחר העתיקו את מספר הטלפון הבא
-        </p>
-        <div
-          style="
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-          "
+        <!-- Button/Href 1 -->
+        <a
+          href="https://bitpay.poalimlinks.co.il/app/share-info?i=182702853867_19hAhc8F"
+          target="_blank"
+          ><button class="groupButton" id="button1" disabled>
+            תרומה של 20
+          </button></a
         >
-          <svg
-            onclick="copyText()"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            version="1.1"
-            width="50px"
-            height="50px"
-            viewBox="0 0 256 256"
-            xml:space="preserve"
+
+        <!-- Button/Href 4 -->
+        <a
+          href="https://bitpay.poalimlinks.co.il/app/share-info?i=182702853867_19hAhcOP"
+          target="_blank"
+          ><button class="groupButton" id="button4" disabled>
+            תרומה של 200
+          </button></a
+        >
+        <!-- Button/Href 3 -->
+        <a
+          href="https://bitpay.poalimlinks.co.il/app/share-info?i=193506298461_19hAhcMB"
+          target="_blank"
+          ><button class="groupButton" id="button3" disabled>
+            תרומה של 100
+          </button></a
+        >
+      </div>
+
+      <p onclick="copyText()" style="font-size: 50px; margin-bottom: 0px">
+        לבחירת סכום אחר העתיקו את מספר הטלפון הבא
+      </p>
+      <div
+        style="
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+        "
+      >
+        <svg
+          onclick="copyText()"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          version="1.1"
+          width="50px"
+          height="50px"
+          viewBox="0 0 256 256"
+          xml:space="preserve"
+        >
+          <defs></defs>
+          <g
+            style="
+              stroke: none;
+              stroke-width: 0;
+              stroke-dasharray: none;
+              stroke-linecap: butt;
+              stroke-linejoin: miter;
+              stroke-miterlimit: 10;
+              fill: none;
+              fill-rule: nonzero;
+              opacity: 1;
+            "
+            transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)"
           >
-            <defs></defs>
-            <g
+            <path
+              d="M 89.962 26.732 c -0.001 -0.007 -0.001 -0.014 -0.002 -0.021 c -0.035 -0.173 -0.098 -0.335 -0.174 -0.489 c -0.018 -0.037 -0.038 -0.071 -0.058 -0.107 c -0.089 -0.155 -0.19 -0.301 -0.316 -0.426 L 64.312 0.587 c -0.125 -0.125 -0.27 -0.226 -0.424 -0.315 c -0.037 -0.021 -0.073 -0.042 -0.111 -0.06 c -0.153 -0.075 -0.313 -0.138 -0.484 -0.172 c -0.011 -0.002 -0.023 -0.001 -0.034 -0.003 C 63.14 0.015 63.02 0 62.896 0 h -34.28 c -6.295 0 -11.417 5.122 -11.417 11.417 v 5.782 h -5.782 C 5.122 17.199 0 22.321 0 28.616 v 49.967 C 0 84.878 5.122 90 11.417 90 h 49.967 c 6.295 0 11.417 -5.122 11.417 -11.417 v -5.782 h 5.782 C 84.878 72.801 90 67.679 90 61.384 v -34.28 C 90 26.977 89.985 26.853 89.962 26.732 z M 83.172 25.104 H 68.205 c -1.824 0 -3.309 -1.485 -3.309 -3.31 V 6.829 L 83.172 25.104 z M 68.801 78.583 c 0 4.09 -3.327 7.417 -7.417 7.417 H 11.417 C 7.327 86 4 82.673 4 78.583 V 28.616 c 0 -4.09 3.327 -7.417 7.417 -7.417 h 5.782 v 40.185 c 0 6.295 5.122 11.417 11.417 11.417 h 40.185 V 78.583 z M 86 61.384 c 0 4.09 -3.327 7.417 -7.417 7.417 h -7.782 H 28.616 c -4.09 0 -7.417 -3.327 -7.417 -7.417 V 19.199 v -7.782 c 0 -4.09 3.327 -7.417 7.417 -7.417 h 32.28 v 17.794 c 0 4.03 3.278 7.31 7.309 7.31 H 86 V 61.384 z"
               style="
                 stroke: none;
-                stroke-width: 0;
+                stroke-width: 1;
                 stroke-dasharray: none;
                 stroke-linecap: butt;
                 stroke-linejoin: miter;
                 stroke-miterlimit: 10;
-                fill: none;
+                fill: rgb(255, 255, 255);
                 fill-rule: nonzero;
                 opacity: 1;
               "
-              transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)"
-            >
-              <path
-                d="M 89.962 26.732 c -0.001 -0.007 -0.001 -0.014 -0.002 -0.021 c -0.035 -0.173 -0.098 -0.335 -0.174 -0.489 c -0.018 -0.037 -0.038 -0.071 -0.058 -0.107 c -0.089 -0.155 -0.19 -0.301 -0.316 -0.426 L 64.312 0.587 c -0.125 -0.125 -0.27 -0.226 -0.424 -0.315 c -0.037 -0.021 -0.073 -0.042 -0.111 -0.06 c -0.153 -0.075 -0.313 -0.138 -0.484 -0.172 c -0.011 -0.002 -0.023 -0.001 -0.034 -0.003 C 63.14 0.015 63.02 0 62.896 0 h -34.28 c -6.295 0 -11.417 5.122 -11.417 11.417 v 5.782 h -5.782 C 5.122 17.199 0 22.321 0 28.616 v 49.967 C 0 84.878 5.122 90 11.417 90 h 49.967 c 6.295 0 11.417 -5.122 11.417 -11.417 v -5.782 h 5.782 C 84.878 72.801 90 67.679 90 61.384 v -34.28 C 90 26.977 89.985 26.853 89.962 26.732 z M 83.172 25.104 H 68.205 c -1.824 0 -3.309 -1.485 -3.309 -3.31 V 6.829 L 83.172 25.104 z M 68.801 78.583 c 0 4.09 -3.327 7.417 -7.417 7.417 H 11.417 C 7.327 86 4 82.673 4 78.583 V 28.616 c 0 -4.09 3.327 -7.417 7.417 -7.417 h 5.782 v 40.185 c 0 6.295 5.122 11.417 11.417 11.417 h 40.185 V 78.583 z M 86 61.384 c 0 4.09 -3.327 7.417 -7.417 7.417 h -7.782 H 28.616 c -4.09 0 -7.417 -3.327 -7.417 -7.417 V 19.199 v -7.782 c 0 -4.09 3.327 -7.417 7.417 -7.417 h 32.28 v 17.794 c 0 4.03 3.278 7.31 7.309 7.31 H 86 V 61.384 z"
-                style="
-                  stroke: none;
-                  stroke-width: 1;
-                  stroke-dasharray: none;
-                  stroke-linecap: butt;
-                  stroke-linejoin: miter;
-                  stroke-miterlimit: 10;
-                  fill: rgb(255, 255, 255);
-                  fill-rule: nonzero;
-                  opacity: 1;
-                "
-                transform=" matrix(1 0 0 1 0 0) "
-                stroke-linecap="round"
-              />
-            </g>
-          </svg>
-          <p
-            style="
-              font-size: 50px;
-              margin-left: 30px;
-              margin-top: 20px;
-              margin-bottom: 20px;
-            "
-          >
-            050-9584354
-          </p>
-        </div>
-        <input
+              transform=" matrix(1 0 0 1 0 0) "
+              stroke-linecap="round"
+            />
+          </g>
+        </svg>
+        <p
+          style="
+            font-size: 50px;
+            margin-left: 30px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+          "
+        >
+          050-9584354
+        </p>
+      </div>
+      <!-- <input
           type="submit"
           id="submitButton"
           value="תרומת סכום אחר"
           disabled
-        />
-      </form>
+        /> -->
     </div>
 
     <script>
