--- a/front.html
+++ b/front.html
@@ -232,7 +232,7 @@
                 headers: {
                   "Content-Type": "application/json",
                 },
-                body: JSON.stringify({ phoneNumber: phoneNumberInput.value }),
+                body: JSON.stringify({ phoneNumber: phoneNumberInput }),
               }
             );
           } else {
